# ml-atap-usr

./: CMakeLists.txt  README.md  input.cc  input.h  main.cc  ml-predictions.cc  ml-predictions.py  model.cc  model.h  popGrid.cc  popGrid.h
models/BlastRad1/: scaling_parameters.csv  weights.csv
models/ThermRad2/: scaling_parameters.csv  weights.csv
python-utils/: ml-predictions.py  model2csv.py
